2020-04-25  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.ext:
	* Makefile.tst.prologue:
	* Makefile:
	* socket.h:
	* popen.h:
	* popen.c:
	* getid.c:
	* gawkmisc.pc:
	* dlfcn.h:
	* config.sed: Update copyright years.  Reported by Scott Deifik
	<scottd.mail@sbcglobal.net>.

2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.1.0: Release tar ball made.

2019-12-22         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.tst: Updated.

2019-06-18         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.0.1: Release tar ball made.

2019-04-13  Eli Zaretskii  <eliz@gnu.org>

	* Makefile (install1): Copy the *.txt files needed to display the
	manuals in the stand-alone Info reader.

2019-04-12         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog.1: Rotated ChangeLog into this file.
	* ChangeLog: Created anew for gawk 5.0.0 and on.
	* 5.0.0: Release tar ball made.