@@ -1,3 +1,11 @@
+2020-07-25  Eli Zaretskii  <eliz@gnu.org>
+
+	* Makefile (mingw32, mingw32-readline, mingw32-mpfr)
+	(mingw32-readline-mpfr): Remove -lmsvcp60 from the linker command
+	line.  That library is not freely redistributable, and linking
+	against it should no longer be necessary with latest MinGW runtime
+	versions.
+
 2020-04-25  Eli Zaretskii  <eliz@gnu.org>
 
 	* Makefile.ext:
